Added page structure and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>ELECTRO_STRENGTH</h1>
+    </header>
+    <section class="item-grid">
+        <div class="item-card">
+            <h2 class="item-name">Name</h2>
+            <img src="#" alt="" class="item-img">
+            <p class="item-price">Price: 0.99 pounds</p>
+            <p class="item-desc">Description: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Amet natus, nemo nam optio blanditiis vitae. Vero ducimus nihil voluptates accusamus
+                mollitia aut natus sequi, distinctio deleniti consectetur odit blanditiis qui!</p>
+            <a href="#" class="item-celler">Seller Profile</a>
+            <div class="item-buy">BUY IT</div>
+        </div>
+    </section>
 </body>
 </html>
